welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value get
    setPos(getX() + 1, get Y());
                       ^